--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -6,7 +6,7 @@
       </selection-buttons>
 
       <selection-content>
-        <class-form class="ctrl.classInEdit" references="ctrl.model.references"></class-form>
+        <class-form class="ctrl.classInEdit" model="ctrl.model"></class-form>
       </selection-content>
     </selection-view>
   </div>
