--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -5,7 +5,7 @@
     </selection-buttons>
 
     <selection-content>
-      <predicate-form predicate="ctrl.predicateInEdit" references="ctrl.model.references"></predicate-form>
+      <predicate-form predicate="ctrl.predicateInEdit" model="ctrl.model"></predicate-form>
     </selection-content>
   </selection-view>
 </form>
