--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,9 +1,40 @@
-<editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="predicate.label" /></editable>
-<editable title="Id"><input name="Id" class="form-control" type="text" id-input ng-model="predicate.curie" /></editable>
-<editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="predicate.comment"></textarea></editable>
-<editable title="{{'Super' + predicate.type}}" name="Superproperty"><predicate-select name="Superproperty" type="predicate.type" curie="predicate.subPropertyOf"></predicate-select></editable>
-<editable title="Range" name="Range" ng-if="predicate.isAttribute()"><range-select range="predicate.range"></range-select></editable>
-<editable title="Value class" name="Value class" ng-if="predicate.isAssociation()"><class-select name="Value class" curie="predicate.range"></class-select></editable>
+<editable title="Label">
+  <input name="Label" class="form-control" type="text" localized-input ng-model="predicate.label" />
+</editable>
+
+<editable title="Id">
+  <input name="Id" class="form-control" type="text" id-input ng-model="predicate.curie" />
+</editable>
+
+<editable title="Comment">
+  <textarea name="Comment" class="form-control" localized-input ng-model="predicate.comment"></textarea>
+</editable>
+
+<editable title="{{'Super' + predicate.type}}"
+          link="model.linkToCurie(predicate.type, predicate.subPropertyOf)"
+          external-link="model.linkToExternalCurie(predicate.subPropertyOf)"
+          name="Superproperty">
+  <predicate-select name="Superproperty" type="predicate.type" curie="predicate.subPropertyOf"></predicate-select>
+</editable>
+
+<editable ng-if="predicate.isAttribute()"
+          title="Range"
+          name="Range">
+  <range-select range="predicate.range"></range-select>
+</editable>
+
+<editable ng-if="predicate.isAssociation()"
+          title="Value class"
+          name="Value class"
+          link="model.linkToCurie('class', predicate.range)"
+          external-link="model.linkToExternalCurie(predicate.range)">
+  <class-select name="Value class" curie="predicate.range"></class-select>
+</editable>
+
 <non-editable title="Is defined by" value="predicate.modelId" link="predicate.iowUrl"></non-editable>
-<editable title="State" value-as-localization-key="true"><state-select state="predicate.state"></state-select></editable>
-<editable-subject-select references="references" type="predicate" subject="predicate.subject"></editable-subject-select>
+
+<editable title="State" value-as-localization-key="true">
+  <state-select state="predicate.state"></state-select>
+</editable>
+
+<editable-subject-select references="model.references" type="predicate" subject="predicate.subject"></editable-subject-select>
