--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-md-4" window-height padding="300">
-          <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate" references="ctrl.references"></predicate-form>
+          <predicate-form ng-if="ctrl.selectedPredicate" predicate="ctrl.selectedPredicate" model="ctrl.model"></predicate-form>
           <div class="alert alert-danger" role="alert" ng-show="ctrl.submitError">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span translate>Save failed</span>
