--- a/src/app.scss
+++ b/src/app.scss
@@ -319,7 +319,51 @@ a.accordion-toggle {
 
 .frontpage-panel {
   @extend .iow-panel;
-  width: 50%;
+  width: 90%;
+  margin-top: 21px;
+}
+
+.frontpage-panel-heading {
+  @extend .panel-heading;
+  h2 {
+    margin: 5px;
+  }
+}
+
+.point {
+  @include clearfix;
+  margin-top: 40px;
+  margin-right: 10%;
+
+  $bullet-width: 100px;
+
+  .content {
+    width: calc(100% - #{$bullet-width});
+    float: left;
+  }
+
+  .bullet-container {
+    float: left;
+    width: $bullet-width;
+
+    .bullet {
+      margin-right: 20px;
+      text-align: center;
+      vertical-align: text-bottom;
+      border: 2px solid #ddd;
+      border-radius: 60px;
+      padding: 0;
+      background-color: #f5f5f5;
+
+      span {
+        display: inline-block;
+        font-weight: bold;
+        padding: 35px 40px;
+        text-align: center;
+        margin: 0;
+      }
+    }
+  }
 }
 
 .frontpage-panel__body {
@@ -329,7 +373,7 @@ a.accordion-toggle {
 
 .panel__list {
   list-style: none;
-  padding: 0;
+  padding: 10px;
   margin: 0;
 }
 
