--- a/src/components/index.html
+++ b/src/components/index.html
@@ -1,6 +1,29 @@
 <div class="row">
 
   <div class="col-md-7">
+
+    <div class="frontpage-panel">
+      <div class="frontpage-panel-heading"><h2 translate>Search</h2></div>
+      <div class="frontpage-panel__body">
+        <div class="input-group input-group-lg">
+          <input autofocus type="text" class="form-control" placeholder="{{'search descriptions' | translate}}"
+                 ng-model="ctrl.searchText"
+                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
+          <i class="glyphicon glyphicon-search form-control-feedback"></i>
+        </div>
+
+        <ul class="panel__list">
+          <li class="frontpage-panel__list__item" ng-repeat="searchResult in ctrl.searchResults">
+            <i ng-class="searchResult.glyphIconClass"></i>
+            <a ng-show="searchResult.iowUrl" ng-href="{{searchResult.iowUrl}}">{{searchResult | translateLabel}}</a>
+            <span ng-hide="searchResult.iowUrl">{{searchResult | translateLabel}}</span>
+            <p>{{searchResult.comment | translateValue}}</p>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+
     <div class="frontpage-panel">
       <div class="frontpage-panel-heading"><h2 translate>Browse</h2></div>
       <div class="frontpage-panel__body">
