--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -1,12 +1,36 @@
-<div class="top" ng-hide="ctrl.loading">
-  <div class="top-actions">
-    <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.group.homepage}}" target="_blank" translate>Ask for group rights</a>
-    <button type="button" class="btn btn-default right" ng-click="ctrl.addModel()" ng-if="ctrl.canAddModel()" translate>Add model</button>
+<div ng-hide="ctrl.loading">
+
+  <div class="model-header">
+    <h2>{{ctrl.group | translateLabel}}</h2>
   </div>
-  <h2>{{ctrl.group | translateLabel}}</h2>
-  <ul>
-    <li ng-repeat="model in ctrl.models">
-      <a ng-href="{{model.iowUrl}}">{{model | translateLabel}}</a>
-    </li>
-  </ul>
+
+  <form name="form">
+    <div class="model-editable-content">
+
+      <editable-buttons editable-controller="ctrl">
+        <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.group.homepage}}" target="_blank" translate>Ask for group rights</a>
+        <button type="button" class="btn btn-default right" ng-click="ctrl.addModel()" ng-if="ctrl.canAddModel()" translate>Add model</button>
+      </editable-buttons>
+
+      <div class="col-md-6">
+        <editable title="Label"><input name="Label" class="form-control" type="text" localized-input ng-model="ctrl.groupInEdit.label" /></editable>
+        <editable title="Comment"><textarea name="Comment" class="form-control" localized-input ng-model="ctrl.groupInEdit.comment"></textarea></editable>
+      </div>
+
+      <div class="col-md-6">
+        <div class="group-panel">
+          <div class="iow-panel-heading"><h2 translate>Models</h2></div>
+          <div class="panel-body">
+            <ul class="scrolling-panel__list">
+              <li ng-repeat="model in ctrl.models">
+                <i ng-class="model.glyphIconClass"></i>
+                <a ng-href="{{model.iowUrl}}">{{model | translateLabel}}</a>
+                <p>{{model.comment | translateValue}}</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
