--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -3,7 +3,7 @@
 </div>
 
 <form name="form">
-  <div uib-collapse="!ctrl.visible" class="model-editable-content">
+  <div uib-collapse="!ctrl.visible" class="main-editable-content">
 
     <editable-buttons editable-controller="ctrl">
       <button type="button" class="btn btn-default right" ng-click="ctrl.addRequire()" ng-show="ctrl.canModify()" translate>Add require</button>
