--- a/src/components/form/editable.html
+++ b/src/components/form/editable.html
@@ -4,7 +4,7 @@
     <ng-transclude></ng-transclude>
   </div>
 
-  <a ng-if="!formController.editing && link && isDifferentUrl(link)" ng-href="{{link}}">{{displayValue()}}</a>
+  <a ng-if="!formController.editing && link && isDifferentUrl(link)" ng-href="{{'#' + link}}">{{displayValue()}}</a>
   <a ng-if="!formController.editing && externalLink" ng-href="{{externalLink}}" target="_blank">{{displayValue()}}</a>
   <span ng-if="!formController.editing && (!link || !isDifferentUrl(link)) && !externalLink" >{{displayValue()}}</span>
 </div>
