--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -1,5 +1,5 @@
 <form name="form">
-  <div ng-if="ctrl.class">
+  <div ng-if="ctrl.class && ctrl.model">
     <selection-view editable-controller="ctrl">
       <selection-buttons>
         <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.canModify()" translate>Add property</button>
