--- a/src/components/editor/predicateView.html
+++ b/src/components/editor/predicateView.html
@@ -8,6 +8,10 @@
       <selection-content>
         <predicate-form predicate="ctrl.predicateInEdit" model="ctrl.model"></predicate-form>
       </selection-content>
+
+      <selection-visualization>
+        <predicate-visualization data="visualizationData"></predicate-visualization>
+      </selection-visualization>
     </selection-view>
   </div>
 </form>
