--- a/src/app.scss
+++ b/src/app.scss
@@ -134,6 +134,16 @@ h2 .model-view__title {
   border: solid 1px #ddd;
 }
 
+.visualization-container {
+  width: 100%;
+  height: 100%;
+
+  .link-tools .tool-remove { display: none }
+  .link-tools .tool-options { display: none }
+  .link .mark-errors { display: none; }
+  .marker-arrowheads { display: none; }
+}
+
 .selection-form {
   padding: 15px;
 }
