--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -21,6 +21,8 @@
     <div class="component-header">
       <h3 translate>Visualization</h3>
     </div>
-    <div window-height="no-scroll" padding="85"></div>
+    <div window-height="no-scroll" padding="85">
+      <div class="visualization-container" ng-transclude="visualization"></div>
+    </div>
   </div>
 </div>
