--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -10,7 +10,7 @@
       </selection-content>
 
       <selection-visualization>
-        <class-visualization ng-if="ctrl.visualizationData && ctrl.class" model="ctrl.model" data="ctrl.visualizationData"></class-visualization>
+        <class-visualization model="ctrl.model" class="ctrl.class"></class-visualization>
       </selection-visualization>
     </selection-view>
   </div>
