admins can select more states

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -20,7 +20,7 @@
 <non-editable title="Is defined by" value="ctrl.class.modelId" link="ctrl.class.iowUrl"></non-editable>
 
 <editable title="State" value-as-localization-key="true">
-  <state-select state="ctrl.class.state"></state-select>
+  <state-select state="ctrl.class.state" model="ctrl.model"></state-select>
 </editable>
 
 <editable-subject-select references="ctrl.model.references" type="ctrl.class" subject="ctrl.class.subject"></editable-subject-select>
