--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -34,7 +34,7 @@
 <non-editable title="Is defined by" value="ctrl.predicate.modelId" link="ctrl.predicate.iowUrl"></non-editable>
 
 <editable title="State" value-as-localization-key="true">
-  <state-select state="ctrl.predicate.state"></state-select>
+  <state-select state="ctrl.predicate.state" model="ctrl.model"></state-select>
 </editable>
 
 <editable-subject-select references="ctrl.model.references" type="predicate" subject="ctrl.predicate.subject"></editable-subject-select>
