Rename editableController + editableButtons to editableEntity*

--- a/src/components/editor/selectionView.html
+++ b/src/components/editor/selectionView.html
@@ -5,9 +5,9 @@
     </div>
 
     <div float="top-actions-placeholder">
-      <editable-buttons editable-controller="editableController">
+      <editable-entity-buttons editable-controller="editableController">
         <div ng-transclude="buttons"></div>
-      </editable-buttons>
+      </editable-entity-buttons>
     </div>
 
     <div class="selection-form" window-height="min" padding="134">
