--- a/src/components/editor/editableSubjectSelect.html
+++ b/src/components/editor/editableSubjectSelect.html
@@ -3,7 +3,7 @@
     <div class="model-view__title" translate>Subject</div>
     <div ng-hide="ctrl.subject" translate>Not defined</div>
     <div class="model-view__sub">
-      <non-editable title="Id" value="ctrl.subject.id" external-link="ctrl.subject.id"></non-editable>
+      <non-editable title="Id" value="ctrl.subject.id" link="ctrl.subject.id"></non-editable>
       <non-editable title="Label" value="ctrl.subject.label"></non-editable>
       <non-editable title="Comment" value="ctrl.subject.comment"></non-editable>
     </div>
